kubernetes_action/helm/Ingress_rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        # pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
